--- a/Domiki.Data/Domiki.Data.csproj
+++ b/Domiki.Data/Domiki.Data.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domiki.Data\Domiki.Data.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.22" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.22" />
   </ItemGroup>
 
 </Project>
